--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  font-family: sans-serif;
   font-size: 16px;
   box-sizing: border-box;
   min-height: 100vh;
@@ -9,7 +10,9 @@ body {
   justify-content: center;
   align-items: center;
 }
-.App {
-  font-family: sans-serif;
-  text-align: center;
+
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
 }
